some changes in navbar and do some work on categery section

--- a/index.html
+++ b/index.html
@@ -8,26 +8,131 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <img src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg" alt="flipkart logo">
-        <form>
-            <img src="icon/search.svg" alt="">
-            <input type="text" name="" id="search" placeholder="Search For Products, Brands Ans More">
-        </form>
-        <div class="login">
-            <img src="icon/user.svg" alt="">
-            Login
+
+    <!-- nav bar -->
+    <div class="nav-container">
+        
+        <nav>
+            <!-- logo -->
+            <img src="icon/logo.svg" alt="flipkart logo">
+            
+            <!-- search form  -->
+            <form>
+                <img src="icon/search.svg" alt="">
+                <!-- search fild  -->
+                <input type="text" name="" id="search" placeholder="Search For Products, Brands Ans More">
+            </form>
+
+            <!-- login section  -->
+            <div class="login">
+                <img src="icon/user.svg" alt="" class="user-icon">
+                Login
+                <img src="icon/down.svg" alt="" class="down-arrow">
+            </div>
+
+            <!-- cart section  -->
+            <div class="cart">
+                <img src="icon/cart.svg" alt="">
+                Cart
+            </div>
+
+            <!-- seller section  -->
+            <div class="seller">
+                <img src="icon/store.svg" alt="">
+                Become a seller
+            </div>
+
+            <!-- etc. menu section  -->
+            <img src="icon/menu.svg" alt="" class="menu">
+        </nav> 
+    </div>
+
+
+    <!-- categories section  -->
+    <div class="categery">
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/Grocery.png" alt="">
+                <span>
+                    Grocery
+                </span>
+            </a>
         </div>
-        <div class="cart">
-            <img src="icon/cart.svg" alt="">
-            Cart
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/mobiles.png" alt="">
+                <span>
+                    Mobiles
+                </span>
+            </a>
         </div>
-        <div class="seller">
-            <img src="icon/store.svg" alt="">
-            Become a seller
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/fashion.png" alt="">
+                <span>
+                    Fashion
+                </span>
+            </a>
         </div>
-        <img src="icon/menu.svg" alt="" class="menu">
-    </nav>
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/electronics.png" alt="">
+                <span>
+                    Electronics
+                </span>
+            </a>
+        </div>
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/Home & Furniture.jpg" alt="">
+                <span>
+                    Home & Furniture
+                </span>
+            </a>
+        </div>
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/Appliances.jpg" alt="">
+                <span>
+                    Appliances
+                </span>
+            </a>
+        </div>
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/Travel.png" alt="">
+                <span>
+                    Travel
+                </span>
+            </a>
+        </div>
+
+        <div class="suncate">
+            <a href="#">
+                <img src="categery/Beauty, Toys & More.png" alt="">
+                <span>
+                    Beauty, Toys & More
+                </span>
+            </a>
+        </div>
+
+        <div class="subcate">
+            <a href="#">
+                <img src="categery/two wheelers.png" alt="">
+                <span>
+                    Two Wheelers
+                </span>
+            </a>
+        </div>
+
+    </div>
+
 
 </body>
 </html>
