--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipkart</title>
-    <!-- <script src="https://kit.fontawesome.com/5d5e2cbc3f.js" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -158,6 +157,72 @@
         <button class="right-btn arrow-btn">
             <img src="icon/down.svg" alt="" class="right-arrow">
         </button>
+    </div>
+
+    <div class="section-1-container">
+        <div class="section-1">
+            <div class="best-section">
+                <div class="best-title">
+                    <p>Best of Electronics</p>
+                    <div class="view-more">
+                        <svg width="16" height="16" fill="none" viewBox="0 0 17 17" style="margin-bottom:4px;margin-left:4px;margin-right:4px;margin-top:4px"><path d="m6.627 3.749 5 5-5 5" stroke="#FFFFFF" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+                    </div>
+                </div>
+
+                <div class="items">
+
+                    <div class="item">
+                        <img src="imges/1.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="imges/2.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="imges/3.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="imges/4.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="imges/5.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div>
+                    <!-- <div class="item">
+                        <img src="imges/6.jpeg" alt="">
+                        <div class="info">
+                            <div class="name">Top Selling Dell</div>
+                            <div class="price">From ₹229</div>
+                        </div>
+                    </div> -->
+
+                </div>
+
+
+            </div>
+
+            <div class="side-ads">
+                <!-- <img src="imges/side.jpg" alt=""> -->
+            </div>
+        </div>
     </div>
     
     
