--- a/index.html
+++ b/index.html
@@ -174,36 +174,36 @@
                     <div class="item">
                         <img src="imges/1.jpeg" alt="">
                         <div class="info">
-                            <div class="name">Top Selling Dell</div>
+                            <div class="name">Premium PowerBanks</div>
                             <div class="price">From ₹229</div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="imges/2.jpeg" alt="">
                         <div class="info">
-                            <div class="name">Top Selling Dell</div>
-                            <div class="price">From ₹229</div>
+                            <div class="name">Top Cameras</div>
+                            <div class="price">Shop Now!</div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="imges/3.jpeg" alt="">
                         <div class="info">
-                            <div class="name">Top Selling Dell</div>
-                            <div class="price">From ₹229</div>
+                            <div class="name">Monitor</div>
+                            <div class="price">From ₹8275</div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="imges/4.jpeg" alt="">
                         <div class="info">
-                            <div class="name">Top Selling Dell</div>
-                            <div class="price">From ₹229</div>
+                            <div class="name">Projector</div>
+                            <div class="price">Buy Now!</div>
                         </div>
                     </div>
                     <div class="item">
                         <img src="imges/5.jpeg" alt="">
                         <div class="info">
-                            <div class="name">Top Selling Dell</div>
-                            <div class="price">From ₹229</div>
+                            <div class="name">Printer</div>
+                            <div class="price">From ₹3999</div>
                         </div>
                     </div>
                     <!-- <div class="item">
