section 2 is done

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     </div>
 
     <div class="section-1-container">
-        <div class="section-1">
-            <div class="best-section">
-                <div class="best-title">
+        <div class="section-1 ">
+            <div class="section">
+                <div class="title">
                     <p>Best of Electronics</p>
                     <div class="view-more">
                         <svg width="16" height="16" fill="none" viewBox="0 0 17 17" style="margin-bottom:4px;margin-left:4px;margin-right:4px;margin-top:4px"><path d="m6.627 3.749 5 5-5 5" stroke="#FFFFFF" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
@@ -215,8 +215,6 @@
                     </div> -->
 
                 </div>
-
-
             </div>
 
             <div class="side-ads">
@@ -224,6 +222,75 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+    <div class="section-2 section">
+        <div class="title">
+            <p>Beauty, Food, Toys & more</p>
+            <div class="view-more">
+                <svg width="16" height="16" fill="none" viewBox="0 0 17 17" style="margin-bottom:4px;margin-left:4px;margin-right:4px;margin-top:4px"><path d="m6.627 3.749 5 5-5 5" stroke="#FFFFFF" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
+            </div>
+        </div>  
+
+        <div class="items">
+            <div class="item">
+                <div class="img">
+                    <img src="section-2/1.jpeg" alt="">
+                </div>
+                <div class="info">
+                    <div class="name">Printer</div>
+                    <div class="price">From ₹3999</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="section-2/2.jpeg" alt="">
+                </div>
+                <div class="info">
+                    <div class="name">Printer</div>
+                    <div class="price">From ₹3999</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="section-2/3.jpeg" alt="">
+                </div>
+                <div class="info">
+                    <div class="name">Printer</div>
+                    <div class="price">From ₹3999</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="section-2/4.jpeg" alt="">
+                </div>
+                <div class="info">
+                    <div class="name">Printer</div>
+                    <div class="price">From ₹3999</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="img">
+                    <img src="section-2/5.jpeg" alt="">
+                </div>
+                <div class="info">
+                    <div class="name">Printer</div>
+                    <div class="price">From ₹3999</div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
     
     
 </body>
