--- a/index.html
+++ b/index.html
@@ -372,14 +372,30 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="footer-2">
-            <div class="box-1"></div>
-            <div class="box-2"></div>
-            <div class="box-3"></div>
-            <div class="box-4"></div>
-            <div class="box-5"></div>
-            <div class="box-6"></div>
-        </div> -->
+        <div class="footer-2">
+            <div class="box-1">
+                <img src="footer/14.svg" alt="">
+                <p>Becomr a Seller</p>
+            </div>
+            <div class="box-2">
+                <img src="footer/15.svg" alt="">
+                <p>Advertise</p>
+            </div>
+            <div class="box-3">
+                <img src="footer/16.svg" alt="">
+                <p>Gift Cards</p>
+            </div>
+            <div class="box-4">
+                <img src="footer/17.svg" alt="">
+                <p>Help Center</p>
+            </div>
+            <div class="box-5">
+                © 2007-2024 Flipkart.com
+            </div>
+            <div class="box-6">
+                <img src="footer/18.svg" alt="">
+            </div>
+        </div>
             
     </footer>
 
